[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "piptide-helper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.6.0",
    "transformers>=5.7.0",
    "accelerate>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
piptide-server = "peptide_helper.server:main"

[tool.setuptools.packages.find]
include = ["peptide_helper*"]
